# data-updating

./: .gitignore  README.md  main.py  pyproject.toml
app/: main.py
app/classes/: google_trends.py  twitter_trends.py
app/config/: config.py  constants.py
app/controllers/: tendencies_controller.py
app/models/: update_google_trends.py  update_twitter_trends.py
app/repositories/: tendencies_repository.py
app/routers/: update_trends.py
